objects/Genesys_Care_Forecasting_Rollup__c.object
<CustomObject>
    <fields>
        <fullName>Total_First_Year_Maintenance_EUR__c</fullName>
        <formula>APAC_First_Year_Maintenance_EUR__c + EMEA_First_Year_Maintenance_EUR__c  +  Latin_America_First_Year_Maintenance_EUR__c  +  North_America_First_Year_Maintenance_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total First Year Maintenance EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_First_Year_Maintenance__c</fullName>
        <formula>APAC_First_Year_Maintenance__c + EMEA_First_Year_Maintenance__c + Latin_America_First_Year_Maintenance__c + North_America_First_Year_Maintenance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total First Year Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Incremental_Revenue_EUR__c</fullName>
        <formula>APAC_Incremental_Revenue_EUR__c  +  EMEA_Incremental_Revenue_EUR__c  +  Latin_America_Incremental_Revenue_EUR__c  +  North_America_Incremental_Revenue_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Incremental Revenue EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Incremental_Revenue__c</fullName>
        <formula>APAC_Incremental_Revenue__c +  EMEA_Incremental_Revenue__c +  Latin_America_Incremental_Revenue__c +  North_America_Incremental_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Incremental Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Recognition_EUR__c</fullName>
        <formula>APAC_Revenue_Recognition_EUR__c  +  EMEA_Revenue_Recognition_EUR__c  +  Latin_America_Revenue_Recognition_EUR__c  +  North_America_Revenue_Recognition_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue Recognition EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Recognition__c</fullName>
        <formula>APAC_Revenue_Recognition__c + EMEA_Revenue_Recognition__c + Latin_America_Revenue_Recognition__c + North_America_Revenue_Recognition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue Recognition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Year_Text__c</fullName>
        <label>Year Text</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Genesys Care Forecasting Rollup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GCFR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Genesys Care Forecasting Rollup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>